--- a/GraduationRSVP/app/src/main/res/values/strings.xml
+++ b/GraduationRSVP/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GraduationRSVP</string>
+    <string name="graduation_announcement">Graduation Announcement</string>
 </resources>
